# dbt-xray

./: .env  .gitignore  README.md  connect-docker.sh  docker-compose.yml  docker-integration-tests.sh  pyproject.toml  pytest.ini
.github/workflows/: docker-compose-up.yml
dbt_xray/: callbacks.py  main.py  model.py  params.py  utils.py
dockerfiles/dbt-xray/: Dockerfile  integration-tests.sh
dockerfiles/postgres/: Dockerfile
dockerfiles/postgres/init/: initialize.sh  landing.yml
integration_tests/: dbt_project.yml  profiles.yml
integration_tests/macros/: dbt_run_started_at.sql
integration_tests/models/: _sources.yml
integration_tests/models/staging/: stg_user_events.sql  stg_user_events.unit.yml  stg_user_events.yml
integration_tests/tests/unit/: unit_test__empty.sql  unit_test__fallible.sql  unit_test__one_row.sql
tests/: conftest.py  test_integration.py
